--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipses</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#" (click)="onClick('recipe')">Recipses</a></li>
+        <li><a href="#" (click)="onClick('shop')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
